Contrast and spacing fixes

--- a/styles/04-base/global.scss
+++ b/styles/04-base/global.scss
@@ -15,6 +15,10 @@ body {
 
 main {
   background-color: var(--color-dust);
+
+  @include media('>=large') {
+    padding-bottom: 128px;
+  }
 }
 
 ::selection {
