--- a/styles/07-components/poster.scss
+++ b/styles/07-components/poster.scss
@@ -15,7 +15,14 @@
         background-image: radial-gradient(var(--color-carbon-900) 1.5px, transparent 0);
         background-size: 32px 32px;
         transform: translate3d(-50%, -50%, 0);
-        z-index: -1;
+        z-index: 0;
+      }
+    }
+
+    img {
+      @include media('>=large') {
+        position: relative;
+        z-index: 1;
       }
     }
   }
